Added CSS to the Excercises

--- a/html/lifts/barbellshrugs.html
+++ b/html/lifts/barbellshrugs.html
@@ -4,39 +4,45 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Barbell Shrugs</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Barbell Shrug</h1>
-	</header>
+		</header>
+	</div>
+
+	<h1>The Barbell Shrug</h1>
 
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
-  		<img src="../../img/lifts/barbellshrug.jpg">
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
+  			<img src="../../img/lifts/barbellshrug.jpg">
+  		</div>
   		<figcaption>Primary Muscles: Trapeius<br>Secondary Muscles: Rhomboids</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p> The barbell shrug is an exercise targeting the traps. It's popular in stregth and muscle-focused upper-body training, and often trained on a shoulder day.</p>
+	<h3 class="de">Description</h2>
+	<p class="desc">The barbell shrug is an exercise targeting the traps. It's popular in stregth and muscle-focused upper-body training, and often trained on a shoulder day.</p>
 
 
-	<h2>Instructions</h2>
-	<p> Step 1: Standinf with your feet shoulder-width apart, place a barbell in front of your thighs, hands shoulder-width apart, palms facing your body, and arms fully extended.</p>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Standing with your feet shoulder-width apart, place a barbell in front of your thighs, hands shoulder-width apart, palms facing your body, and arms fully extended.<br><br>
 
-	<p> Step 2: Keeping your arms straight, shrug your shoulders as high as you can. Pasue, then lower to start postion.</p>
+	Step 2: Keeping your arms straight, shrug your shoulders as high as you can. Pasue, then lower to start postion.</p>
 	
-	<h2>Demonstration</h2>
+	<h5 class="demo">Demonstration</h5>
+		<div class="gif">
 	<embed src="https://j.gifs.com/XLRqjk.gif" width="400" height="400"></embed>
 </body>
 </html>
