--- a/html/lifts/benchpress.html
+++ b/html/lifts/benchpress.html
@@ -4,41 +4,48 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Benchpress</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Bench Press</h1>
-	</header>
+		</header>
+	</div>
+
+	<h1>The Bench Press</h1>
 
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
-  		<img src="../../img/lifts/benching.jpg">
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
+  			<img src="../../img/lifts/benching.jpg">
+  		</div>
   		<figcaption>Primary Muscles: Chest, Triceps, Interior Deltoids<br>Secondary Muscles: Lateral & Medial Triceps</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p> The barbell bench press is an upper body pressing drill that builds size and strength in the upper body, specifacally in the chest, triceps and shoulders.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The barbell bench press is an upper body pressing drill that builds size and strength in the upper body, specifacally in the chest, triceps and shoulders.</p>
 
 
-	<h2>Instructions</h2>
-	<p> Step 1: Lie on your back on a bench. Grasp a barbell with a overhand grip just wider than shoulder width apart and hold it above your chest with you arms fully extended. </p>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Lie on your back on a bench. Grasp a barbell with a overhand grip just wider than shoulder width apart and hold it above your chest with you arms fully extended.<br><br>
 
-	<p> Step 2: Lower the bar straight down in controlled motion. Make sure you keep your elbows tucked in close to your body so your upper arms form a 45-degree angle to your body in the down position. Pause, and then press the bar in a straight line back up to the starting position. <br><br>
+	Step 2: Lower the bar straight down in controlled motion. Make sure you keep your elbows tucked in close to your body so your upper arms form a 45-degree angle to your body in the down position. Pause, and then press the bar in a straight line back up to the starting position. <br><br>
 
 	</p>
 
-	<h2>Demonstration</h2>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/oVP84X.gif" width="400" height="400"></embed>
+</div>
 </body>
 </html>
