--- a/html/lifts/cablerows.html
+++ b/html/lifts/cablerows.html
@@ -4,41 +4,48 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Cable Rows</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Cable Row</h1>
-	</header>
+		</header>
+	</div>
+
+	<h1>The Cable Row</h1>
 
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
-  		<img src="../../img/lifts/cablerow.jpg">
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
+  			<img src="../../img/lifts/cablerow.jpg">
+  		</div>
   		<figcaption>Primary Muscles: Lats & Trapezius<br>Secondary Muscles: Biceps & Rear Deltoids</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>  The seated cable row is a popular exercise to train the muscles of the upper back, including the lats, traps, and rear deltoids, using a cable stack.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The seated cable row is a popular exercise to train the muscles of the upper back, including the lats, traps, and rear deltoids, using a cable stack.</p>
 
 
-	<h2>Instructions</h2>
-	<p> Step 1: Sit slightly forward on the platform and grasp the cable attachment. slide hips back, positioning your knees with a slight bend. </p>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Sit slightly forward on the platform and grasp the cable attachment. slide hips back, positioning your knees with a slight bend.<br><br>
 
-	<p> Step 2: Pull the handle straight into your chest, bending at the elbow and squeezing your shoulder blades together. Remain upright throughout and do not sway during the movement. <br><br>
+	Step 2: Pull the handle straight into your chest, bending at the elbow and squeezing your shoulder blades together. Remain upright throughout and do not sway during the movement.
 
 	</p>
 
-	<h2>Demonstration</h2>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/vlkR10.gif" width="400" height="400"></embed>
+</div>
 </body>
 </html>
