--- a/html/lifts/dumbbellcurl.html
+++ b/html/lifts/dumbbellcurl.html
@@ -4,41 +4,46 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Dumbbell Curl</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Dumbbell Curl</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Dumbbell Curl</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
   		<img src="../../img/lifts/dumbbellcurl.jpg">
+  		</div>
   		<figcaption>Primary Muscles: Bicep<br>Secondary Muscles: N/A</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The dumbbell curl is one of the best isolations movements for bicep activation. Since the bicep curl is an isolation movement it is recommended to perform it at the end of a workout once all compound movements are done to allocate more energy to the compound lifts.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The dumbbell curl is one of the best isolations movements for bicep activation. Since the bicep curl is an isolation movement it is recommended to perform it at the end of a workout once all compound movements are done to allocate more energy to the compound lifts.</p>
 
 
-	<h2>Instructions</h2>
-	<p> Step 1: Hold a dumbbell in each hand and stand with your feet as wide apart as your hips and let your arms hand down at your sides with your palms forward.</p>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Hold a dumbbell in each hand and stand with your feet as wide apart as your hips and let your arms hand down at your sides with your palms forward.<br><br>
 
-	<p> Step 2: Pull your abdominals in, stand tall, and keep your knees slightly bent.</p>
+	Step 2: Pull your abdominals in, stand tall, and keep your knees slightly bent.<br><br>
 
-	<p> Step 3: Curl both arms upward until they're in front of your soulders and slowly lower the dumbbell back down.</p>
+	Step 3: Curl both arms upward until they're in front of your soulders and slowly lower the dumbbell back down.</p>
 
-	<h2>Demonstration</h2>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/p8PB0N.gif" width="400" height="400"></embed>
+</div>
 </body>
 </html>
