--- a/html/lifts/dumbbelllateralraise.html
+++ b/html/lifts/dumbbelllateralraise.html
@@ -4,41 +4,46 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Dumbbell Lateral Raise</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Dumbbell Lateral Raise</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Dumbbell Lateral Raise</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
   		<img src="../../img/lifts/lateralraise.jpg">
+  		</div>
   		<figcaption>Primary Muscles: Lateral Deltoids<br>Secondary Muscles: Anterior Deltoids</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The dumbbell lateral raise is an isolation exercise that stregthens the entire shoulder with an emphasis on the sides of the deltiods muscles.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The dumbbell lateral raise is an isolation exercise that stregthens the entire shoulder with an emphasis on the sides of the deltiods muscles.</p>
 
 
-	<h2>Instructions</h2>
-	<p> Step 1: Standing in a shoulder-width stance, grab a pair of dumbbells with palms facing inward and let then hang at your sides.</p>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Standing in a shoulder-width stance, grab a pair of dumbbells with palms facing inward and let then hang at your sides.<br><br>
 
-	<p> Step 2: Rasie your arms out to the sides until they're at shoulder level.</p>
+	Step 2: Rasie your arms out to the sides until they're at shoulder level.<br><br>
 
-	<p> Step 3: Pause, then lower the weights back to the stating position.</p>
+	Step 3: Pause, then lower the weights back to the stating position.</p>
 
-	<h2>Demonstration</h2>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/r86BOK.gif" width="400" height="400"></embed>
+</div>
 </body>
 </html>
