--- a/html/lifts/facepull.html
+++ b/html/lifts/facepull.html
@@ -4,35 +4,38 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Facepulls</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Facepulls</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Facepulls</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
   		<img src="../../img/lifts/facepull.jpg">
+  		</div>	
   		<figcaption>Primary Muscles: Rear Delts,<br>Secondary Muscles: </figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The facepull is a very important but also ignored excercise. Facepulls are an isolation movement that activate the rear delts which are a usually ignored muscle. Since they are an isolation movement it is recommended to do facepulls at the end of a workout to allocate energy to compound lifts.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The facepull is a very important but also ignored excercise. Facepulls are an isolation movement that activate the rear delts which are a usually ignored muscle. Since they are an isolation movement it is recommended to do facepulls at the end of a workout to allocate energy to compound lifts.</p>
 
 
-	<h2>Instructions</h2>
-	<p>Step 1: Standing with your knees slightly bent and feet shoulder width apart grab the rope with an underhand grip, with your thumbs up.<br><br>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Standing with your knees slightly bent and feet shoulder width apart grab the rope with an underhand grip, with your thumbs up.<br><br>
 
 	Step 2: Take a few steps back from the tower to extend the cable. Keep a strong athletic stance, activating your core and glutes.<br><br>
 	
@@ -40,7 +43,9 @@
 
 	Step 4: Return to the starting position, making sure to keep your shoulders up.</p>
 
-	<h2>Demonstration</h2>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/NLRXz6.gif" width="400" height="400"></embed>
+</div>
 </body>
 </html>
