--- a/html/lifts/legextension.html
+++ b/html/lifts/legextension.html
@@ -4,42 +4,47 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Seated Leg Extension</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Seated Leg Extension</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Seated Leg Extension</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
   		<img src="../../img/lifts/legextension.jpg">
+  	</div>
   		<figcaption>Primary Muscles: Quadriceps<br>Secondary Muscles: Rectus Femoris</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>Leg extensions are exercise usually done with a level machine. You sit on a padded seat and raise a padded bar with your legs.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">Leg extensions are exercise usually done with a level machine. You sit on a padded seat and raise a padded bar with your legs.</p>
 
 
-	<h2>Instructions</h2>
-	<p> Step 1: Place your hands on the hand bars.</p>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Place your hands on the hand bars.<br><br>
 
-	<p> Step 2: Lift the weight while exhauling until your legs are almost straight and don't loc kyour knees. Keep your back against the backrest and do not arch your back.</p>
+	Step 2: Lift the weight while exhauling until your legs are almost straight and don't loc kyour knees. Keep your back against the backrest and do not arch your back.<br><br>
 
-	<p>	Step 3: Exhale and lower the weight back to starting position.</p>
+	Step 3: Exhale and lower the weight back to starting position.</p>
 
 	
-	<h2>Demonstration</h2>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/Mw6NyA.gif" width="400" height="400"></embed>
+</div>
 </body>
 </html>
