--- a/html/lifts/overheadpress.html
+++ b/html/lifts/overheadpress.html
@@ -4,35 +4,37 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Overhead Press</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Overhead Press</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Overhead Press</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
-  		<img src="../../img/lifts/overheadpress.jpg">
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
+  		<img src="../../img/lifts/overheadpress.jpg"></div>
   		<figcaption>Primary Muscles: Anterior Delt, Pectoralis Major, Triceps<br>Secondary Muscles: Trapezius</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p></p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The overhead press is arguably one of the most important compound movements in regards to overall strength. Being a vertical press the overhead press targets primarily the anterior delts and upper portion of the pectoralis major. The overhead press is also great for its ability to build stabilization which is foundational for strength.</p>
 
 
-	<h2>Instructions</h2>
-	<p>Step 1: Grab the bar with a pronated grip ensuring you arm is making a straight line from the tip of your finger to your elbow and get under the bar. <br><br>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Grab the bar with a pronated grip ensuring you arm is making a straight line from the tip of your finger to your elbow and get under the bar. <br><br>
 
 	Step 2: When getting under the bar bend your knees slightly and straighten them when completely under the bar to lift the weight.<br><br>
 
@@ -43,7 +45,8 @@
 	Step 5: Continue pressing the weight up while moving your head back to its original position. Avoid locking your elbows at the top of the movement. Allow the weight to come down slowly while breathing out by controlling it and stopping it on your upper chest. When the bar is coming back down the bar path move your head out of the way the same way you did when pressing the weight up.
 	</p>
 
-	<h2>Demonstration</h2>
-	<embed src="https://j.gifs.com/71kYR1.gif" width="400" height="400"></embed>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
+	<embed src="https://j.gifs.com/71kYR1.gif" width="400" height="400"></embed></div>
 </body>
 </html>
