--- a/html/lifts/pendlayrow.html
+++ b/html/lifts/pendlayrow.html
@@ -4,35 +4,37 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Pendlay Row</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Pendlay Row</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Pendlay Row</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
-  		<img src="../../img/lifts/pendlayrow.jpg">
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
+  		<img src="../../img/lifts/pendlayrow.jpg"></div>
   		<figcaption>Primary Muscles: Lats, Trapezius, Biceps<br>Secondary Muscles: Rear Delts</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The pendlay row is an excellent back building compound movement. The pendlay row activates the lats, traps, biceps, and rear delts. The pendlay row is best used to build back thickness, contrary to vertical pulls that build back width.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The pendlay row is an excellent back building compound movement. The pendlay row activates the lats, traps, biceps, and rear delts. The pendlay row is best used to build back thickness, contrary to vertical pulls that build back width.</p>
 
 
-	<h2>Instructions</h2>
-	<p>Step 1: Stand with your mid-foot under the bar.<br><br>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Stand with your mid-foot under the bar.<br><br>
 
 	Step 2: Bend over and grab the bar with a pronated grip. Breath in deeply into your diaphragm making sure to keep your knees bent and back neutral and horizontal.<br><br>
 	
@@ -40,7 +42,8 @@
 
 	</p>
 
-	<h2>Demonstration</h2>
-	<embed src="https://j.gifs.com/RO7kQq.gif" width="400" height="400"></embed>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
+	<embed src="https://j.gifs.com/RO7kQq.gif" width="400" height="400"></embed></div>
 </body>
 </html>
