--- a/html/lifts/seatedcalfraise.html
+++ b/html/lifts/seatedcalfraise.html
@@ -4,35 +4,37 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Seated Calf Raise</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Seated Calf Raise</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Seated Calf Raise</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
-  		<img src="../../img/lifts/seatedcalfraise.jpg">
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
+  		<img src="../../img/lifts/seatedcalfraise.jpg"></div>
   		<figcaption>Primary Muscles: Soleus,<br>Secondary Muscles: </figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The seated calf raise is an often ignored excercise but a crucial one. The seated calf raise targets the soleus (the small calf muscle). If the seated calf raise is ignored it can cause a serious aesthetic imbalance between the thigh and calves.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The seated calf raise is an often ignored excercise but a crucial one. The seated calf raise targets the soleus (the small calf muscle). If the seated calf raise is ignored it can cause a serious aesthetic imbalance between the thigh and calves.</p>
 
 
-	<h2>Instructions</h2>
-	<p>Step 1: Take a seat on the machine and place the balls of your feet on the platform with your toes pointed forward - your heels will naturally hang off. Position the base of quads under the knee pad and allow your hands to rest on top.<br><br>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Take a seat on the machine and place the balls of your feet on the platform with your toes pointed forward - your heels will naturally hang off. Position the base of quads under the knee pad and allow your hands to rest on top.<br><br>
 
 	Step 2: Extend your ankles and release the safety bar.<br><br>
 	
@@ -40,7 +42,8 @@
 
 	Step 4: Extend the ankles and exhale as you flex the calves.</p>
 
-	<h2>Demonstration</h2>
-	<embed src="https://j.gifs.com/lxPXq5.gif" width="400" height="400"></embed>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
+	<embed src="https://j.gifs.com/lxPXq5.gif" width="400" height="400"></embed></div>
 </body>
 </html>
