--- a/html/lifts/seatedlegcurl.html
+++ b/html/lifts/seatedlegcurl.html
@@ -4,42 +4,46 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Seated Leg Curl</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Seated Leg Curl</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Seated Leg Curl</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
-  		<img src="../../img/lifts/seatedlegcurl.jpg">
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
+  		<img src="../../img/lifts/seatedlegcurl.jpg"></div>
   		<figcaption>Primary Muscles: Hamstrings <br>Secondary Muscles: N/A</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The leg curl is a popular machine-based exercise for the legs, particularly the hamstrings. </p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The leg curl is a popular machine-based exercise for the legs, particularly the hamstrings. </p>
 
 
-	<h2>Instructions</h2>
-	<p> Step 1: Adjust the machine lever to fit your height and sit on the machine with yoour back against the back support pad.</p>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Adjust the machine lever to fit your height and sit on the machine with yoour back against the back support pad.<br><br>
 
-	<p> Step 2: Place the back of lower leg on top padded lever and secure the lap pad against your thighs, just above the knees. Then grasp the side handles on the machine as you point your toes straight and ensure that the legs are fully straight right in front of you.</p>
+	Step 2: Place the back of lower leg on top padded lever and secure the lap pad against your thighs, just above the knees. Then grasp the side handles on the machine as you point your toes straight and ensure that the legs are fully straight right in front of you.<br><br>
 
-	<p> Step 3: As you exhale, pull the machine lever as far as possible to the back of your thighs by flexing at the knees. Keep your torso stationary at all times. Hold the contracted position for a second.</p>
+	Step 3: As you exhale, pull the machine lever as far as possible to the back of your thighs by flexing at the knees. Keep your torso stationary at all times. Hold the contracted position for a second.<br><br>
 
-	<p>	Step 4: Slowly return to the starting position as you breathe in. </p>
-	<h2>Demonstration</h2>
-	<embed src="https://j.gifs.com/r86Bj6.gif" width="400" height="400"></embed>
+	Step 4: Slowly return to the starting position as you breathe in.</p>
+
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
+	<embed src="https://j.gifs.com/r86Bj6.gif" width="400" height="400"></embed></div>
 </body>
 </html>
