--- a/html/lifts/tricepextension.html
+++ b/html/lifts/tricepextension.html
@@ -4,42 +4,45 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Cable Tricep Extension</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Cable Tricep Extension</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Cable Tricep Extension</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
-  		<img src="../../img/lifts/tricepextension.jpg">
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
+  		<img src="../../img/lifts/tricepextension.jpg"></div>
   		<figcaption>Primary Muscles: Tricep<br>Secondary Muscles: </figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The cable tricep extension is one of the best isolation excercises for tricep hypertrophy. Isolation movements such as the cable tricep extension are best performed at the end of a workout once the compound movements have been done to allow for more energy to be used for compound lifts.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The cable tricep extension is one of the best isolation excercises for tricep hypertrophy. Isolation movements such as the cable tricep extension are best performed at the end of a workout once the compound movements have been done to allow for more energy to be used for compound lifts.</p>
 
 
-	<h2>Instructions</h2>
-	<p>Step 1: Stand with your feet shoulder width apart and knees slightly bent. Grab the rope attachment on the cable.<br><br>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Stand with your feet shoulder width apart and knees slightly bent. Grab the rope attachment on the cable.<br><br>
 
 	Step 2: Imagining your elbow as a pull system breath in and pull the rope down while keeping your elbows in place and shoulders externaly rotated. Squeeze at the bottom of the pull for a full range of motion.<br><br>
 
 	Step 3: Allow the weight to pull the cable back to the starting position in a controlled manner while breating out and keeping your elbows in place.
 	</p>
 
-	<h2>Demonstration</h2>
-	<embed src="https://j.gifs.com/1WDEyV.gif" width="400" height="400"></embed>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
+	<embed src="https://j.gifs.com/1WDEyV.gif" width="400" height="400"></embed></div>
 </body>
 </html>
