--- a/html/lifts/calfraise.html
+++ b/html/lifts/calfraise.html
@@ -4,41 +4,46 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Calf Raise</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Calf Raise</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Calf Raise</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
   		<img src="../../img/lifts/calfraise.jpg">
+  		</div>
   		<figcaption>Primary Muscles: Gastrocnemius,<br>Secondary Muscles: Soleus</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The calf raise is an often ignored excercise but a crucial one. The calf raise targets the gastrocnemius (the large calf muscle) and the soleus (the small calf muscle). If the calf raise is ignored it can cause a serious aesthetic imbalance between the thigh and calves.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The calf raise is an often ignored excercise but a crucial one. The calf raise targets the gastrocnemius (the large calf muscle) and the soleus (the small calf muscle). If the calf raise is ignored it can cause a serious aesthetic imbalance between the thigh and calves.</p>
 
 
-	<h2>Instructions</h2>
-	<p>Step 1: Position yourself on a leg press machine with only the top half of your foot being on the platform ensuring not to lock your knees.<br><br>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Position yourself on a leg press machine with only the top half of your foot being on the platform ensuring not to lock your knees.<br><br>
 
 	Step 2: Push the platform away from you as if you were going to stand on your toes. Hold this position for about 2 seconds.<br><br>
 	
 	Step 3: Allow the platform to come towards you by reversing the movement and allowing your foot to make a 80 degree angle with your shin.</p>
 
-	<h2>Demonstration</h2>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/91mGzz.gif" width="400" height="400"></embed>
+</div>
 </body>
 </html>
