--- a/html/lifts/deadlift.html
+++ b/html/lifts/deadlift.html
@@ -8,18 +8,21 @@
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Deadlift</h1>
-	</header>
+		</header>
+	</div>
+
+	<h1>The Deadlift</h1>
 
 	<figure>
 		<h2 class="titl">Muscle Activation Diagram</h2>
@@ -29,14 +32,14 @@
   		<figcaption>Primary Muscles: Hamstrings, Spinal Erectors, Glutes,<br>Secondary Muscles: Lats, Trapezius, Levator Scapulae</figcaption>
 	</figure>
 
-	<h3 class="de">Description</h2>
+	<h3 class="de">Description</h3>
 	<p class="desc">The deadlift is a primarily lower body but can also be classified as a full body compound movement. It is a key excercise when training
 	for strength and like the squat is one of the more physcial and mentally taxing movements. The primary muscles being used for the deadlift are the hamstrings,
 	spinal erectors, and glutes with a respectable amount of activation being shown in the lats, trapezius, and levator scapulae.</p>
 
 
 	<h4 class="Inst">Instructions</h4>
-	<p class="desc1">Step 1: Stand with your feet hip-distance apart and bend down in a sitting motion until your thighs are parallel with the ground while ensuring your back is straight. Take an overhand grip on the bar with your handss slightly wider than shoulder-width aprt.<br><br>
+	<p class="desc1">Step 1: Stand with your feet hip-distance apart and bend down in a sitting motion until your thighs are parallel with the ground while ensuring your back is straight. Take an overhand grip on the bar with your hands slightly wider than shoulder-width aprt.<br><br>
 
 	Step 2: Take a deep breath into your diaphragm and lift the bar by pushing up through your legs imagining your arms are just ropes with a claw at the end.<br><br>
 	
@@ -46,6 +49,7 @@
 
 	<h5 class="demo">Demonstration</h5>
 	<div class="gif">
-	<embed src="https://j.gifs.com/71kYBO.gif" width="400" height="400"></embed>
+		<embed src="https://j.gifs.com/71kYBO.gif" width="400" height="400"></embed>
+	</div>
 </body>
 </html>
