--- a/html/lifts/inclinebenchpress.html
+++ b/html/lifts/inclinebenchpress.html
@@ -4,40 +4,45 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Incline Bench Press</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Incline Bench Press</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Incline Bench Press</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
   		<img src="../../img/lifts/inclinebenchpress.jpg">
+  		</div>
   		<figcaption>Primary Muscles: Pectoralis Major, Triceps, Anterior Delt <br>Secondary Muscles: Lateral Delt</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The incline bench press like the bench press is a compound lift that activates the pectoralis major, triceps, anterior, and lateral delts. The difference between the incline bench press and the bench press is that the incline bench press puts a higher enfaces on the upper portion of the chest and the anterior delts.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The incline bench press like the bench press is a compound lift that activates the pectoralis major, triceps, anterior, and lateral delts. The difference between the incline bench press and the bench press is that the incline bench press puts a higher enfaces on the upper portion of the chest and the anterior delts.</p>
 
 
-	<h2>Instructions</h2>
-	<p>Step 1: Position your body on an incline bench on a 30-45 degree angle. Grab a barbell with an overhand grip that's shoulder-width apart and hold it above your chest. Extend arms upward, locking out elbows.<br><br>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Position your body on an incline bench on a 30-45 degree angle. Grab a barbell with an overhand grip that's shoulder-width apart and hold it above your chest. Extend arms upward, locking out elbows.<br><br>
 
 	Step 2: Lower the bar straight down in a slow, controlled movement to your chest. Pause, then press the bar in a straight line back up to the starting position.<br><br>
 	</p>
 
-	<h2>Demonstration</h2>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/0YBEJv.gif" width="400" height="400"></embed>
+</div>
 </body>
 </html>
