--- a/html/lifts/lateralpulldown.html
+++ b/html/lifts/lateralpulldown.html
@@ -4,42 +4,48 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Lateral Pulldown </title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Lateral Pulldown</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Lateral Pulldown</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
   		<img src="../../img/lifts/lateralpulldown.jpg">
+  	</div>
   		<figcaption>Primary Muscles: Lats<br>Secondary Muscles: Rear Deltoids</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The pulldown exercise is a strength training exercise designed to develop the latissimus dorsal muscle. It performs the functions of downward rotation and depression of the scapulae combined with adduction and extension of the shoulder joint. </p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The pulldown exercise is a strength training exercise designed to develop the latissimus dorsal muscle. It performs the functions of downward rotation and depression of the scapulae combined with adduction and extension of the shoulder joint. </p>
 
 
-	<h2>Instructions</h2>
-	<p> Step 1: Sit at a lat pulldown station and grab the bar with an overhand grip that's just beyond shoulder width. Your arms should be sompletely straight and your torso upright.</p>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Sit at a lat pulldown station and grab the bar with an overhand grip that's just beyond shoulder width. Your arms should be sompletely straight and your torso upright.<br><br>
 
-	<p> Step 2: Pull your shoulder blades down and back and bring the bar to your chest. Pause, then slowly return to the starting position.</p>
+	Step 2: Pull your shoulder blades down and back and bring the bar to your chest. Pause, then slowly return to the starting position.<br><br>
 
-	<p> Step 3: As you exhale, pull the machine lever as far as possible to the back of your thighs by flexing at the knees. Keep your torso stationary at all times. Hold the contracted position for a second.</p>
+	Step 3: As you exhale, pull the machine lever as far as possible to the back of your thighs by flexing at the knees. Keep your torso stationary at all times. Hold the contracted position for a second.<br><br>
 
-	<p>	Step 4: Slowly return to the starting position as you breathe in. </p>
-	<h2>Demonstration</h2>
+	Step 4: Slowly return to the starting position as you breathe in.</p>
+
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/QnRjYY.gif" width="400" height="400"></embed>
+</div>
 </body>
 </html>
