--- a/html/lifts/pullups.html
+++ b/html/lifts/pullups.html
@@ -4,42 +4,45 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Pullups</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Pullup</h1>
-	</header>
-
+		</header>
+	</div>
+	<h1>The Pullup</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
-  		<img src="../../img/lifts/pullups.jpg">
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
+  		<img src="../../img/lifts/pullups.jpg"></div>
   		<figcaption>Primary Muscles: Lats, Traps, Biceps<br>Secondary Muscles: Rectus Abdominus</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The pullup is the most important vertical pulling excercise for the back. It has been shown to have more engagement of the lats, traps, and biceps then other forms of vertical pulling as well as higher secondary activation of the rectus abdominus due to spinal flexion isometric contraction.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The pullup is the most important vertical pulling excercise for the back. It has been shown to have more engagement of the lats, traps, and biceps then other forms of vertical pulling as well as higher secondary activation of the rectus abdominus due to spinal flexion isometric contraction.</p>
 
 
-	<h2>Instructions</h2>
-	<p>Step 1: Grab the pull up bar with a pronated grip and hang from the bar.<br><br>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Grab the pull up bar with a pronated grip and hang from the bar.<br><br>
 
 	Step 2: Breath into your diaphragm deeply and pull yourself up while externally rotating your shoulders and puffing your chest out. Try to get your chest as close to the bar and your hands as possible.<br><br>
 
 	Step 3: Breat out and control yourself as you bring yourself down to a hang.
 	</p>
 
-	<h2>Demonstration</h2>
-	<embed src="https://j.gifs.com/lxPXoj.gif" width="400" height="400"></embed>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
+	<embed src="https://j.gifs.com/lxPXoj.gif" width="400" height="400"></embed></div>
 </body>
 </html>
